k3s-playground/myserv3.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx3-service
  labels:
    run: nginx3-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: nginx3
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx3
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: nginx3
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      containers:
      - name: nginx3
        image: library/nginx
        ports:
        - containerPort: 80
        imagePullPolicy: Always
