k3s-playground/webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    run: webapp-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 6543
    protocol: TCP
    name: http
  selector:
    run: webapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: webapp
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      containers:
      - name: webapp
        image: docker.uberresearch.com/radar:release_3_23_2_20190328_114800
        ports:
        - containerPort: 6543
        imagePullPolicy: Always
      imagePullSecrets:
      - name: docker.uberresearch.com
